tests/analyzer/valid/0004_clean_complex.tj
def calculate(a: int, b: int) -> int {
    if (a > b) {
        return a - b
    } else {
        return b - a
    }
}

def process(x: int) -> int {
    return x * 2
}
