tests/analyzer/invalid/0002_duplicate_parameters.tj
def bad_params(x: int, x: int) -> int {
    return x
}

def another_bad(a: int, b: int, a: int) -> int {
    return a + b
}
